[package]
name = "screwdriver"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.44"
sdl2 = "0.34.5"
glow = "0.12.3"
imgui = "0.11.0"
imgui-sdl2-support = "0.11.0"
imgui-glow-renderer = "0.11.0"